@@ -1,5 +1,8 @@
 2007-08-20  Marius Vollmer  <marius.vollmer@nokia.com>
 
+	* src/operations.cc (install_packages): Only reboot when a package
+	with the "reboot" flag has been successfully installed.
+
 	* configure.ac (HAM_DEPS): Check for "mce".
 
 	Refactored catalogue management and cache refreshing.
